<resources>
    <string name="app_name">Android HLS Streaming</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password confirm</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_header">Login</string>
    <string name="action_register">Register</string>
    <string name="login_email_error">invalid email</string>
    <string name="login_password_error">Invalid password</string>
    <string name="login_invalid">Invalid email or password</string>
    <string name="login_network_error">Error contacting server</string>
    <string name="registration_password_mismatch">Passwords are not identical</string>
    <string name="registration_network_error">Error contacting server</string>
    <string name="registration_user_exists">User already exists</string>
    <string name="registration_unknown_state">Unknown server response</string>
    <string name="title_activity_registration">Register new user</string>
    <string name="registration_activating">An activation email has been sent to %s</string>
    <string name="registration_resending_activation">An activation email has been sent again to %s</string>

    <string name="title_activity_media">MediaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
